# sia-chatbot

./: .gitignore  .webui_secret_key  Dockerfile  README.md  README_0801.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-docker-image.yaml  docker-build.yaml  merge-docker-images.yaml
backend/: main.py
backend/models/: data.py  exercise.py  personal.py  roster.py  sleep.py
backend/routers/: chat.py
backend/schemas/: chat.py
blueprints/: function_calling_blueprint.py
docs/: CODE_OF_CONDUCT.md  SECURITY.md
examples/filters/: conversation_turn_limit_filter.py  datadog_filter_pipeline.py  detoxify_filter_pipeline.py  dynamic_ollama_vision_filter_pipeline.py  function_calling_filter_pipeline.py  home_assistant_filter.py  langfuse_filter_pipeline.py  langfuse_v3_filter_pipeline.py  libretranslate_filter_pipeline.py  llm_translate_filter_pipeline.py  llmguard_prompt_injection_filter_pipeline.py  mem0_memory_filter_pipeline.py  opik_filter_pipeline.py  presidio_filter_pipeline.py  rate_limit_filter_pipeline.py
examples/pipelines/: events_pipeline.py
examples/scaffolds/: example_pipeline_scaffold.py  filter_pipeline_scaffold.py  function_calling_scaffold.py  manifold_pipeline_scaffold.py
pipelines/: graph_rag.py  hybrid_rag.py  ingestion_pipeline.py
pipelines/failed/: graph_rag.py
pipelines/markdown/: 1-s2.0-S0001457511002612-main.md  1-s2.0-S0001457515301470-main.md  1-s2.0-S0001457521004292-main.md  1-s2.0-S0925753520304410-main.md  1-s2.0-S0925753522001783-main.md  1-s2.0-S1087079211000591-main.md
(+47 files in other folders)
