[project]
name = "sia-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "aiohttp==3.9.5",
    "anthropic>=0.77.1",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.41",
    "chroma-haystack>=4.0.0",
    "chromadb>=1.4.1",
    "ddtrace>=4.3.2",
    "fastapi>=0.111.0",
    "google-generativeai>=0.8.6",
    "grpcio>=1.76.0",
    "haystack-ai>=2.23.0",
    "httpx>=0.27.2",
    "langchain>=0.2.5",
    "langchain-text-splitters>=0.2.1",
    "langfuse>=3.12.1",
    "llama-index>=0.12.3",
    "llama-index-llms-ollama>=0.4.2",
    "matplotlib>=3.10.8",
    "neo4j>=5.28.3",
    "neo4j-graphrag[sentence-transformers]>=1.7.0",
    "nltk>=3.9.2",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "opencv-python>=4.11.0.86",
    "opik>=1.9.8",
    "pandas>=2.3.3",
    "passlib[bcrypt]==1.7.4",
    "peewee>=3.19.0",
    "pillow>=12.1.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.7.1",
    "pyjwt[crypto]>=2.11.0",
    "pymongo>=4.16.0",
    "python-multipart==0.0.9",
    "python-socketio>=5.16.0",
    "redis>=7.1.0",
    "requests==2.32.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "uvicorn[standard]==0.22.0",
    "vertexai>=1.71.1",
    "xgboost>=3.1.3",
]
